; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/exofs/extr_symlink.c_exofs_follow_link.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/exofs/extr_symlink.c_exofs_follow_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.nameidata = type { i32 }
%struct.exofs_i_info = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.dentry*, %struct.nameidata*)* @exofs_follow_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @exofs_follow_link(%struct.dentry* %0, %struct.nameidata* %1) #0 {
  %3 = alloca %struct.dentry*, align 8
  %4 = alloca %struct.nameidata*, align 8
  %5 = alloca %struct.exofs_i_info*, align 8
  store %struct.dentry* %0, %struct.dentry** %3, align 8
  store %struct.nameidata* %1, %struct.nameidata** %4, align 8
  %6 = load %struct.dentry*, %struct.dentry** %3, align 8
  %7 = getelementptr inbounds %struct.dentry, %struct.dentry* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.exofs_i_info* @exofs_i(i32 %8)
  store %struct.exofs_i_info* %9, %struct.exofs_i_info** %5, align 8
  %10 = load %struct.nameidata*, %struct.nameidata** %4, align 8
  %11 = load %struct.exofs_i_info*, %struct.exofs_i_info** %5, align 8
  %12 = getelementptr inbounds %struct.exofs_i_info, %struct.exofs_i_info* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to i8*
  %15 = call i32 @nd_set_link(%struct.nameidata* %10, i8* %14)
  ret i8* null
}

declare dso_local %struct.exofs_i_info* @exofs_i(i32) #1

declare dso_local i32 @nd_set_link(%struct.nameidata*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
